// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UIButton component should render correctly with loading prop 1`] = `
<div>
  <button
    class="ui-button"
    style="position: relative; overflow: hidden;"
  >
    <span>
      Waiting...
    </span>
    <div
      class="wave"
    />
  </button>
</div>
`;

exports[`UIButton component should render correctly with slot 1`] = `
<div>
  <button
    class="ui-button"
    style="position: relative; overflow: hidden;"
  >
    It is a button
    <div
      class="wave"
    />
  </button>
</div>
`;

exports[`UIButton component should render correctly without slot 1`] = `
<div>
  <button
    class="ui-button"
    style="position: relative; overflow: hidden;"
  >
    <div
      class="wave"
    />
  </button>
</div>
`;
